--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^5.2.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
+    "vue-simple-floating-labels": "^1.0.4",
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
